--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -1,14 +1,13 @@
-name: Code Coverage
+
 on: [push]
-	
-	jobs:
-	  deploy:
-	
-	    runs-on: ubuntu-latest
-	
-	    steps:
-	      - uses: actions/checkout@v1
-	      - name: Code coverage-reporter
-	        uses: tj-actions/coverage-reporter@v1
-	        with:
-	          coverage-command: 'python -m coverage report'
+
+jobs:
+  test_job:
+    runs-on: ubuntu-latest
+    name: A job to run github action
+    steps:
+      - uses: actions/checkout@v3
+      - name: Code coverage-reporter
+        uses: tj-actions/coverage-reporter@v3
+        with:
+          coverage-command: 'python -m coverage report'
